chore: add backup configuration for pnpm workspace with ignored built dependencies

--- a/src/content/docs/guides/installccs.mdx
+++ b/src/content/docs/guides/installccs.mdx
@@ -5,6 +5,8 @@ description: "Step-by-step installation tutorial for CCS and TivaWare on Windows
 
 import { Tabs, TabItem, Aside, FileTree } from '@astrojs/starlight/components';
 
+Continue to [Lab 1](/labs/lab0/)
+
 ## 🧰 Development Tools
 
 <Aside type="note" title="Download Required Files">
