Actualiza la configuración de Starlight en astro.config.mjs y añade inclusión en el sitemap para la guía de instalación de CCS.

--- a/src/content/docs/guides/installccs.mdx
+++ b/src/content/docs/guides/installccs.mdx
@@ -1,6 +1,8 @@
 ---
 title: "How to Install Code Composer Studio (CCS) and TivaWare"
 description: "Step-by-step installation tutorial for CCS and TivaWare on Windows, macOS, and Linux"
+sitemap:
+  include: true
 ---
 
 import { Tabs, TabItem, Aside, FileTree } from '@astrojs/starlight/components';
