--- a/src/content/docs/guides/installccs.mdx
+++ b/src/content/docs/guides/installccs.mdx
@@ -1,9 +1,13 @@
 ---
 title: "How to Install Code Composer Studio (CCS) and TivaWare"
 description: "Step-by-step installation tutorial for CCS and TivaWare on Windows, macOS, and Linux"
+sitemap:
+  include: true
 ---
 
 import { Tabs, TabItem, Aside, FileTree } from '@astrojs/starlight/components';
+
+Continue to [Lab 1](/labs/lab0/)
 
 ## 🧰 Development Tools
 
