--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -1,702 +1,366 @@
 ---
-title: Lab 0 - Environment Setup Guide
-description: Complete guide for setting up the development environment for Lab 0 stopwatch and graphical menu project
+title: "Lab 0: Tutorial, Button Handling, Stopwatch"
+description: Introductory tutorial to embedded system platform and development environment
 ---
 
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import { Card, CardGrid } from '@astrojs/starlight/components';
-import { LinkCard } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Steps } from '@astrojs/starlight/components';
+import { Icon } from '@astrojs/starlight/components';
+import { Card, CardGrid, Badge, LinkCard } from '@astrojs/starlight/components';
+import { FileTree } from '@astrojs/starlight/components';
 
-Welcome to Lab 0! This comprehensive guide will help you set up your development environment for creating a stopwatch with graphical menu using the MSP430 microcontroller.
-
-## Lab Overview
-<Card title="Lab 0 Objectives" icon="rocket">
-**Main Goal:** Implement a stopwatch controlled by buttons and a navigable graphical menu.
-
-**Key Learning Topics:**
-- Peripheral initialization
-- Button debouncing techniques
-- Timer interrupt service routines (ISR)
-- Display management systems
-- Modular code structure design
-</Card>
 
 ## Prerequisites
-
-Before diving into Lab 0, ensure you have all necessary components ready:
-
 <CardGrid>
-<Card title="Hardware Requirements" icon="laptop">
-- **MSP430 Development Board** (MSP430FR5994 or equivalent)
-- **Graphical LCD Display** (128x64 pixels recommended)
-- **Push buttons** (minimum 4 for navigation)
-- **Breadboard and jumper wires**
-- **USB cable** for programming and power
-</Card>
-
-<Card title="Software Requirements" icon="setting">
-- **Code Composer Studio (CCS)** v12.0+
-- **MSP430 compiler tools**
-- **Device support packages**
-- **Git** (recommended for version control)
-</Card>
+   <LinkCard
+      title="Complete Setup Guide First"
+      description="Before starting Lab 0, make sure you have completed the environment setup."
+      href="/guides/setupguide/"
+      icon="setting"
+   />
+   <LinkCard
+      title="Back to Lab Summary"
+      description="Return to the overview of all labs."
+      href="/guides/labtimeline/"
+      icon="right-arrow"
+   />
 </CardGrid>
 
-## Installing Code Composer Studio
+## Introduction
 
-<LinkCard
-  title="Download CCS"
-  description="Get the latest version from Texas Instruments"
-  href="https://www.ti.com/tool/CCSTUDIO"
-/>
+<Aside type="note" title="Purpose">
+This lab serves as an introductory tutorial to the **embedded system platform** and **software development environment** that will be used throughout this course. It also provides a review of key concepts from **ECE3849**, helping you become familiar with both the hardware and software tools that will be used in subsequent labs.
+</Aside>
 
-### Installation Process
+In this lab, you will:
+- Set up your development environment using **Code Composer Studio (CCS)**
+- Explore the **TM4C1294XL LaunchPad** and **BOOSTXL-EDUMKII BoosterPack** hardware
+- Import and run a **starter stopwatch project** to verify your environment setup
+- Learn how to write modular embedded programs using **C/C++** and **TI's driver libraries**
 
-<Tabs>
-<TabItem label="Windows">
-1. **Download the Windows installer** (`.exe` file)
-2. **Run as Administrator** to ensure proper installation
-3. **Select installation directory** (default: `C:\ti\ccs1250\`)
-4. **Choose components:**
-   - ✅ MSP430 compiler tools
-   - ✅ MSP430 device support
-   - ✅ Debug probes support
-   - ✅ MSP430 LaunchPad drivers
+<Aside type="caution" title="Lab Requirements"></Aside>
+To complete each lab in this course, you must:
+<Steps>
 
-```bash
-# Installation typically takes 10-15 minutes
-# Total size: ~2.5GB
+1. **Submit your source code** for the lab
+2. **Demonstrate your project** in operation to one of the course staff (TA or tutor)  
+3. Receive a **sign-off** after successful demonstration
+</Steps>
+
+You will be graded based on the completion of the required steps and correct functionality.  
+Late submissions will receive a **20% penalty** unless otherwise specified by your instructor.
+
+### <span style="display: inline-flex; align-items: center;"><Icon name="document" />  Grading Rubric</span>
+| Step | Description | Max Points | Score |
+|:-----|:-------------|:-----------:|:------:|
+| 1 | Compile and flash the **starter stopwatch example** (verify environment) | 10 |   |
+| 2 | Extend the stopwatch to display **HH:MM:SS:MS** format | 20 |   |
+| 3 | Implement physical buttons **S1 → Play/Pause** and **S2 → Reset** | 35 |   |
+| 4 | Add on-screen buttons with feedback and state text (**Running / Stopped**) | 15 |   |
+| 5 | **Source Code** — Organization, readability, and modular structure | 20 |   |
+|   | **Total** | **100** |   |
+
+## Objectives
+
+By the end of this lab, you will have accomplished:
+
+* Install software: **Code Composer Studio (CCS)** and **Free-RTOS**
+* Set up a CCS project for the EK‑TM4C1294XL + BoosterPack
+* Output to the 128×128 LCD display
+* Configure general purpose timers and interrupts
+* Read and debounce user buttons
+* Understand how to import libraries
+
+### Key Learning Points
+
+- Using **hardware timers** for precise time measurement.  
+- Managing non‑blocking tasks with `elapsedMillis` utilities.  
+- Handling **button debouncing** and event callbacks.  
+- Creating simple GUIs using **GRLIB primitives**.  
+- Synchronizing display updates with real‑time processes.
+
+## Required Materials
+
+Before starting this lab, make sure you have the following:
+
+- **TI EK-TM4C1294XL LaunchPad** Development Kit  
+- **BOOSTXL-EDUMKII** BoosterPack  
+- **Micro-USB cable** for programming and power  
+- **Lab 0 Template:** [Download ZIP](https://example.com/lab0-starter.zip)
+
+
+## Stopwatch Implementation
+
+Implement a stopwatch with hours, minutes, seconds, and milliseconds, using the **S1** button for Play/Pause and **S2** for Reset. The application must also show two on‑screen buttons that react to physical button interactions, as well as a text label indicating the current state: **Running** or **Stopped**.
+
+### Overview
+
+In this lab exercise, you will use a **modular C/C++ approach** to design a stopwatch running on the **TM4C1294XL LaunchPad** with the **BOOSTXL‑EDUMKII LCD**.  
+The system measures elapsed time using hardware timers and updates the display at a fixed refresh rate.
+
+The application demonstrates:
+- Use of **timers** for precise millisecond tracking.
+- Integration of **physical button input** with graphical feedback.
+- Modular code structure using custom libraries (`button.h`, `timerLib.h`, `elapsedTime.h`).
+- Real‑time display management with **TI GRLIB**.
+
+---
+
+### Starter Example
+> [!TIP]First test
+> Compile the provided example and flash it to the LaunchPad.This will let you verify that your environment, drivers, and libraries are correctly configured before starting your own modifications.
+
+You are provided with a simplified starter example that demonstrates how to:
+- Initialize the system clock and LCD display.
+- Configure a periodic hardware timer using the `Timer` class and `elapsedTime` Class.
+- Use the `Button` class to detect **press** and **release** events for S1.
+- Draw on‑screen UI elements such as rectangles and text using GRLIB.
+
+In the provided code:
+- **S1** toggles between **Play** and **Pause**.
+- A single on‑screen button labeled **PLAY/PAUSE** changes color when pressed.
+- The display shows the word **STOPWATCH** and a time counter (in seconds) at the center.
+- The background is cleared and redrawn periodically at 20 ms button scan and 50 ms display refresh intervals.
+
+
+### Understanding the Code Structure
+
+> [!Note]
+> Learn how the provided stopwatch code is structured and understand which components are essential in every embedded project you will develop in this course.
+
+---
+
+### 1. System Initialization
+
+Every embedded program should start by **disabling global interrupts** and enabling the **Floating-Point Unit (FPU)**. The FPU improves performance when using floating-point arithmetic, which is often needed for signal processing, filters, or calculations involving time.
+
+```cpp
+IntMasterDisable();
+FPUEnable();
+FPULazyStackingEnable();
 ```
 
-5. **Restart your computer** after installation
-6. **Launch CCS** and verify installation
-</TabItem>
+Afterward, it is crucial to **configure the system clock**, as all peripherals (timers, ADC, UART, etc.) depend on it to operate correctly:
 
-<TabItem label="Linux">
-1. **Download the Linux installer** (`.run` file)
-2. **Make executable and run:**
-```bash
-chmod +x ccs_setup_12.7.0.00007_linux-x64.run
-sudo ./ccs_setup_12.7.0.00007_linux-x64.run
-```
-3. **Select installation directory** (default: `/opt/ti/ccs1250/`)
-4. **Install dependencies:**
-```bash
-sudo apt-get update
-sudo apt-get install libc6:i386 libusb-0.1-4 libgconf-2-4
-```
-5. **Add user to dialout group:**
-```bash
-sudo usermod -a -G dialout $USER
-```
-6. **Log out and log back in** for group changes to take effect
-</TabItem>
-
-<TabItem label="macOS">
-1. **Download the macOS installer** (`.dmg` file)
-2. **Mount the disk image** and run the installer
-3. **Allow installation from identified developer** in System Preferences
-4. **Select installation directory** (default: `/Applications/ti/ccs1250/`)
-5. **Install Xcode Command Line Tools** if prompted:
-```bash
-xcode-select --install
-```
-6. **Grant permissions** for USB access when prompted
-</TabItem>
-</Tabs>
-
-### Post-Installation Setup
-
-After CCS installation, configure device support:
-
-<Tabs>
-<TabItem label="Automatic Setup">
-1. **Launch CCS**
-2. **Navigate to:** Help → Install New Software
-3. **Click "Add"** and select "MSP430 Support"
-4. **Install recommended packages:**
-   - MSP430 compiler tools (latest)
-   - MSP430Ware driver library
-   - Energy Trace technology
-</TabItem>
-
-<TabItem label="Manual Setup">
-1. **Download MSP430Ware** separately from TI website
-2. **Extract to:** `C:\ti\msp430ware` (Windows) or `/opt/ti/msp430ware` (Linux/macOS)
-3. **Add to CCS:** Window → Preferences → Code Composer Studio → Products
-4. **Browse and add** MSP430Ware installation path
-</TabItem>
-</Tabs>
-
-:::tip[Installation Tip]
-If you encounter permission issues, ensure CCS is run with appropriate administrator/root privileges during the first launch.
-:::
-
-## Project Setup
-
-### Creating Your Lab 0 Project
-
-<Tabs>
-<TabItem label="New Project Wizard">
-1. **Launch Code Composer Studio**
-2. **Create workspace:** `C:\ti\workspace_ece3849` (Windows) or `~/ti/workspace_ece3849` (Linux/macOS)
-3. **File → New → CCS Project**
-4. **Configure project settings:**
-   - **Family:** MSP430
-   - **Variant:** MSP430FR5994 (or your specific device)
-   - **Connection:** MSP430 LaunchPad
-   - **Project name:** `Lab0_Stopwatch`
-   - **Template:** Empty project (add main.c)
-   - **Compiler:** TI v21.6.0.LTS or later
-</TabItem>
-
-<TabItem label="Import Template">
-If you have a template project:
-1. **File → Import → General → Existing Projects**
-2. **Browse to template location**
-3. **Select project** and click "Finish"
-4. **Right-click project → Rename** to `Lab0_Stopwatch`
-5. **Update all references** in code files
-</TabItem>
-</Tabs>
-
-### Recommended Project Structure
-
-Organize your project with this modular structure:
-
-```
-Lab0_Stopwatch/
-├── 📁 src/
-│   ├── main.c                    # Main application entry point
-│   ├── 📁 hardware/              # Hardware abstraction layer
-│   │   ├── gpio.c/.h             # GPIO initialization and control
-│   │   ├── timer.c/.h            # Timer configuration and ISR
-│   │   ├── lcd.c/.h              # LCD display driver functions
-│   │   └── adc.c/.h              # ADC configuration (if needed)
-│   ├── 📁 ui/                    # User interface components
-│   │   ├── menu.c/.h             # Menu system implementation
-│   │   ├── stopwatch.c/.h        # Stopwatch functionality
-│   │   └── display.c/.h          # Display management
-│   ├── 📁 utils/                 # Utility functions
-│   │   ├── debounce.c/.h         # Button debouncing utilities
-│   │   ├── ringbuffer.c/.h       # Data structures
-│   │   └── math_utils.c/.h       # Mathematical functions
-│   └── 📁 config/                # Configuration files
-│       ├── system_config.h       # System-wide constants
-│       └── pin_config.h          # Pin definitions
-├── 📁 docs/                      # Documentation
-│   ├── README.md                 # Project documentation
-│   ├── hardware_setup.md         # Hardware connection guide
-│   └── user_manual.md            # User manual
-└── 📁 tests/                     # Test files (optional)
-    ├── test_timer.c              # Timer unit tests
-    └── test_menu.c               # Menu system tests
+```cpp
+gSystemClock = SysCtlClockFreqSet(
+    SYSCTL_XTAL_25MHZ | SYSCTL_OSC_MAIN |
+    SYSCTL_USE_PLL | SYSCTL_CFG_VCO_480,
+    120000000);
 ```
 
-## Hardware Connections
+This setup uses the **25 MHz external crystal** and the **PLL** (Phase-Locked Loop) to generate a **120 MHz system clock**.
 
-### MSP430 LaunchPad Pinout
+---
 
-<Card title="Important Note" icon="warning">
-Always **power off** your LaunchPad before making connections to prevent damage to the microcontroller or peripherals.
-</Card>
+### 2. Display Initialization
 
-### LCD Display Connections
+If the program uses the LCD, the display must be initialized through the graphics context `tContext`. This block configures the SPI interface and prepares the screen for drawing.
 
-<Tabs>
-<TabItem label="Parallel Interface">
-Connect your LCD display using the following pinout:
-
-| LCD Pin | MSP430 Pin | Function | Notes |
-|---------|------------|----------|-------|
-| **VDD** | 3.3V | Power | Use LaunchPad 3.3V rail |
-| **VSS** | GND | Ground | Common ground |
-| **V0** | Potentiometer | Contrast | 10kΩ pot for contrast control |
-| **RS** | P1.0 | Register Select | Data/Command selection |
-| **E** | P1.1 | Enable | Clock signal |
-| **D4** | P1.4 | Data Bit 4 | 4-bit mode |
-| **D5** | P1.5 | Data Bit 5 | 4-bit mode |
-| **D6** | P1.6 | Data Bit 6 | 4-bit mode |
-| **D7** | P1.7 | Data Bit 7 | 4-bit mode |
-| **A** | 3.3V | Backlight Anode | Through 220Ω resistor |
-| **K** | GND | Backlight Cathode | Direct connection |
-
-```c
-// Pin definitions for LCD
-#define LCD_RS_PIN  BIT0  // P1.0
-#define LCD_E_PIN   BIT1  // P1.1
-#define LCD_DATA_PINS (BIT4 | BIT5 | BIT6 | BIT7)  // P1.4-P1.7
+```cpp
+tContext sContext;
+initializeDisplay(sContext);
 ```
-</TabItem>
 
-<TabItem label="SPI Interface">
-For SPI-based LCD displays:
+The display is connected through **SPI2**, and this helper function configures the GRLIB driver and clears the screen:
 
-| LCD Pin | MSP430 Pin | Function |
-|---------|------------|----------|
-| **VCC** | 3.3V | Power |
-| **GND** | GND | Ground |
-| **SCK** | P1.5 (UCB0CLK) | SPI Clock |
-| **SDA** | P1.6 (UCB0SIMO) | SPI Data |
-| **CS** | P1.3 | Chip Select |
-| **DC** | P1.2 | Data/Command |
-| **RST** | P1.4 | Reset |
+```cpp
+static void initializeDisplay(tContext &context)
+{
+    Crystalfontz128x128_Init();
+    Crystalfontz128x128_SetOrientation(LCD_ORIENTATION_UP);
+    GrContextInit(&context, &g_sCrystalfontz128x128);
+    GrContextFontSet(&context, &g_sFontFixed6x8);
 
-```c
-// Pin definitions for SPI LCD
-#define LCD_CS_PIN   BIT3  // P1.3
-#define LCD_DC_PIN   BIT2  // P1.2
-#define LCD_RST_PIN  BIT4  // P1.4
+    tRectangle full = {0, 0, 127, 127};
+    GrContextForegroundSet(&context, ClrBlack);
+    GrRectFill(&context, &full);
+}
 ```
-</TabItem>
-</Tabs>
+
+> [!TIP]
+> Always include this display initialization block whenever your project uses the **Crystalfontz 128×128 LCD**.
+
+---
+
+### 3. Timer and Elapsed Time Setup
+Any task that needs to be executed periodically—like reading a sensor, blinking an LED, or updating the display—requires a timer. In this project, **Timer0** is used as the reference for the `elapsedMillis` objects:
+
+```cpp
+Timer timer;
+configureTimer(timer);
+
+elapsedMillis buttonTick(timer);
+elapsedMillis displayTick(timer);
+elapsedMillis stopwatchTick(timer);
+```
+
+Each `elapsedMillis` instance keeps track of elapsed time independently, allowing you to execute tasks at precise intervals without using delays.
+
+The timer configuration function:
+
+```cpp
+static void configureTimer(Timer &timer)
+{
+    timer.begin(gSystemClock, TIMER0_BASE);
+}
+```
+
+This initializes **Timer0** as a system time base synchronized with the configured system clock.
+
+---
 
 ### Button Configuration
 
-<Card title="Button Wiring" icon="puzzle">
-Configure buttons for menu navigation and stopwatch control:
-</Card>
+Each hardware button (S1, S2, or others) must be configured using the `Button` class before it can be used. The button library handles debouncing and state detection automatically.
 
-| Button | MSP430 Pin | Function | Pull-up |
-|--------|------------|----------|---------|
-| **BTN1** | P2.0 | Start/Stop Stopwatch | Internal |
-| **BTN2** | P2.1 | Reset Stopwatch | Internal |
-| **BTN3** | P2.2 | Menu Up/Previous | Internal |
-| **BTN4** | P2.3 | Menu Down/Next | Internal |
-| **BTN5** | P2.4 | Menu Select/Enter | Internal |
-
-```c
-// Button pin definitions
-#define BTN_START_STOP  BIT0  // P2.0
-#define BTN_RESET       BIT1  // P2.1
-#define BTN_MENU_UP     BIT2  // P2.2
-#define BTN_MENU_DOWN   BIT3  // P2.3
-#define BTN_MENU_SELECT BIT4  // P2.4
-
-// Enable internal pull-up resistors
-#define BTN_ALL_PINS (BTN_START_STOP | BTN_RESET | BTN_MENU_UP | BTN_MENU_DOWN | BTN_MENU_SELECT)
-```
-
-:::note[Pull-up Resistors]
-Enable internal pull-up resistors for all button inputs to ensure proper logic levels and reduce external component count.
-:::
-
-### Optional: LED Indicators
-
-| LED | MSP430 Pin | Function |
-|-----|------------|----------|
-| **LED1** | P1.0 | Status indicator |
-| **LED2** | P9.7 | Stopwatch running |
-
-## Compiler Configuration
-
-### Build Settings Optimization
-
-<Tabs>
-<TabItem label="Debug Configuration">
-Optimized for development and debugging:
-
-```c
-// Project Properties → Build → MSP430 Compiler → Optimization
-Optimization Level: None (-O0)
-Debug Level: Maximum (-g3)
-```
-
-**Additional Debug Settings:**
-- Enable all warnings (`-Wall`)
-- Treat warnings as errors (`-Werror`)
-- Generate debug information (`-g3`)
-- Disable optimizations (`-O0`)
-
-```c
-// Compiler flags for debug
--g3 -Wall -Werror -O0 -std=c99
-```
-</TabItem>
-
-<TabItem label="Release Configuration">
-Optimized for performance and size:
-
-```c
-// Project Properties → Build → MSP430 Compiler → Optimization
-Optimization Level: Size (-Os)
-Debug Level: None
-```
-
-**Additional Release Settings:**
-- Enable size optimizations (`-Os`)
-- Remove unused functions (`-ffunction-sections`)
-- Remove unused data (`-fdata-sections`)
-
-```c
-// Compiler flags for release
--Os -ffunction-sections -fdata-sections -std=c99
-```
-</TabItem>
-</Tabs>
-
-### Linker Configuration
-
-<Tabs>
-<TabItem label="Memory Settings">
-Configure memory allocation for your project:
-
-```c
-// Project Properties → Build → MSP430 Linker → Basic Options
-Heap Size: 512 bytes
-Stack Size: 256 bytes
-```
-
-**Memory Map (MSP430FR5994):**
-- **Flash:** 256KB (0x4400 - 0x43FFF)
-- **SRAM:** 8KB (0x1C00 - 0x3BFF)
-- **Information Memory:** 512B (0x1800 - 0x19FF)
-</TabItem>
-
-<TabItem label="Advanced Settings">
-Advanced linker options for optimization:
-
-```c
-// Enable garbage collection
---gc-sections
-
-// Remove unused sections
---remove-unused-sections
-
-// Generate map file
---map-file=Lab0_Stopwatch.map
-```
-</TabItem>
-</Tabs>
-
-## Testing Your Setup
-
-### Basic Hardware Verification
-
-Create a comprehensive test program to verify your setup:
-
-<Tabs>
-<TabItem label="LED Blink Test">
-```c
-#include <msp430.h>
-
-int main(void) {
-    WDTCTL = WDTPW | WDTHOLD;   // Stop watchdog timer
-    PM5CTL0 &= ~LOCKLPM5;       // Disable GPIO power-on default high-impedance mode
-    
-    // Configure LED pins
-    P1DIR |= BIT0;              // Set P1.0 as output (LED1)
-    P9DIR |= BIT7;              // Set P9.7 as output (LED2)
-    
-    // Initialize LEDs OFF
-    P1OUT &= ~BIT0;
-    P9OUT &= ~BIT7;
-    
-    while(1) {
-        P1OUT ^= BIT0;          // Toggle LED1
-        P9OUT ^= BIT7;          // Toggle LED2
-        __delay_cycles(500000); // Delay ~0.5 seconds at 1MHz
-    }
+```cpp
+static void setupButtons()
+{
+    btnPlayPause.begin();
+    btnPlayPause.setTickIntervalMs(BUTTON_TICK_MS);
+    btnPlayPause.setDebounceMs(30);
 }
 ```
-</TabItem>
 
-<TabItem label="Button Test">
-```c
-#include <msp430.h>
+> [!NOTE]
+> The library automatically assigns the correct GPIO pins for S1 and S2 based on the LaunchPad hardware mapping.
 
-int main(void) {
-    WDTCTL = WDTPW | WDTHOLD;   // Stop watchdog timer
-    PM5CTL0 &= ~LOCKLPM5;       // Disable GPIO power-on default high-impedance mode
-    
-    // Configure button pins
-    P2DIR &= ~(BIT0 | BIT1);    // Set buttons as input
-    P2REN |= (BIT0 | BIT1);     // Enable pull-up resistors
-    P2OUT |= (BIT0 | BIT1);     // Set pull-up resistors
-    
-    // Configure LED
-    P1DIR |= BIT0;              // Set LED as output
-    P1OUT &= ~BIT0;             // Initialize LED OFF
-    
-    while(1) {
-        if(!(P2IN & BIT0)) {    // Button pressed (active low)
-            P1OUT |= BIT0;      // Turn LED ON
-        } else {
-            P1OUT &= ~BIT0;     // Turn LED OFF
-        }
-        __delay_cycles(1000);   // Small delay for debouncing
-    }
-}
+After setup, interrupts can be re-enabled:
+
+```cpp
+IntMasterEnable();
 ```
-</TabItem>
-
-<TabItem label="LCD Test">
-```c
-#include <msp430.h>
-
-// Basic LCD initialization and test
-void lcd_init(void);
-void lcd_write_string(char* str);
-
-int main(void) {
-    WDTCTL = WDTPW | WDTHOLD;   // Stop watchdog timer
-    PM5CTL0 &= ~LOCKLPM5;       // Disable GPIO power-on default high-impedance mode
-    
-    // Initialize LCD
-    lcd_init();
-    
-    // Display test message
-    lcd_write_string("Lab 0 Ready!");
-    
-    while(1) {
-        // Main loop - LCD should display message
-        __delay_cycles(1000000);
-    }
-}
-
-// Add your LCD driver functions here
-void lcd_init(void) {
-    // LCD initialization code
-    // (Implementation depends on your specific LCD)
-}
-
-void lcd_write_string(char* str) {
-    // LCD string writing code
-    // (Implementation depends on your specific LCD)
-}
-```
-</TabItem>
-</Tabs>
-
-### Verification Checklist
-
-<CardGrid>
-<Card title="Hardware Verification" icon="check">
-- ✅ LEDs blink correctly
-- ✅ Buttons respond to input
-- ✅ LCD displays characters
-- ✅ Power consumption is reasonable
-- ✅ No loose connections
-</Card>
-
-<Card title="Software Verification" icon="code">
-- ✅ Project compiles without errors
-- ✅ Code downloads to device
-- ✅ Debugger connects successfully
-- ✅ Breakpoints work properly
-- ✅ Variables can be monitored
-</Card>
-</CardGrid>
-
-## Troubleshooting Common Issues
-
-### Hardware Issues
-
-<Tabs>
-<TabItem label="Connection Problems">
-**Issue:** "Device not found" or "Connection failed"
-
-**Solutions:**
-1. **Check USB cable** - Use a data cable, not charge-only
-2. **Verify driver installation** - Reinstall LaunchPad drivers
-3. **Check device manager** (Windows) or `lsusb` (Linux)
-4. **Try different USB port** - Avoid hubs, use direct connection
-5. **Restart CCS** and try again
-
-```bash
-# Linux: Check USB device recognition
-lsusb | grep -i "texas instruments"
-
-# Windows: Check Device Manager
-# Look for "MSP430 Application UART" under Ports
-```
-</TabItem>
-
-<TabItem label="Programming Issues">
-**Issue:** "Flash programming failed"
-
-**Solutions:**
-1. **Check target voltage** - Ensure 3.3V is present
-2. **Verify connections** - Especially VCC and GND
-3. **Reset the device** - Hold reset button while connecting
-4. **Check for shorts** - Use multimeter to verify connections
-5. **Try different firmware** - Update LaunchPad firmware
-
-```c
-// Add this to beginning of main() if having issues
-PM5CTL0 &= ~LOCKLPM5;  // Disable GPIO power-on default high-impedance mode
-```
-</TabItem>
-</Tabs>
-
-### Software Issues
-
-<Tabs>
-<TabItem label="Compilation Errors">
-**Issue:** Build errors or warnings
-
-**Common Solutions:**
-1. **Missing includes** - Add required header files
-2. **Undefined symbols** - Check function declarations
-3. **Path issues** - Verify include paths in project settings
-4. **Device mismatch** - Ensure correct MSP430 variant selected
-
-```c
-// Common required includes
-#include <msp430.h>
-#include <stdint.h>
-#include <stdbool.h>
-#include <string.h>
-```
-</TabItem>
-
-<TabItem label="Runtime Issues">
-**Issue:** Code doesn't behave as expected
-
-**Debugging Steps:**
-1. **Use breakpoints** - Step through code execution
-2. **Monitor variables** - Add to watch window
-3. **Check register values** - Verify peripheral configuration
-4. **Add debug prints** - Use printf or LED indicators
-
-```c
-// Debug LED toggle macro
-#define DEBUG_TOGGLE_LED() (P1OUT ^= BIT0)
-
-// Use in code to track execution
-DEBUG_TOGGLE_LED();  // Place at key points
-```
-</TabItem>
-</Tabs>
-
-## Development Best Practices
-
-### Code Organization
-
-<Card title="Modular Design Principles" icon="puzzle">
-Follow these principles for maintainable code:
-
-1. **Separation of Concerns** - Each module handles one responsibility
-2. **Clear Interfaces** - Well-defined function signatures
-3. **Documentation** - Comment complex logic and interfaces
-4. **Error Handling** - Check return values and handle edge cases
-5. **Testing** - Write unit tests for individual modules
-</Card>
-
-### Debugging Strategies
-
-<Tabs>
-<TabItem label="Strategic Debugging">
-**Effective Debugging Approach:**
-
-1. **Start Simple** - Test basic functionality first
-2. **Isolate Problems** - Comment out complex code
-3. **Use Assertions** - Add runtime checks
-4. **Log State Changes** - Track variable values
-5. **Systematic Testing** - Test one feature at a time
-
-```c
-// Example assertion macro
-#define ASSERT(condition) \
-    if (!(condition)) { \
-        while(1) { \
-            P1OUT ^= BIT0; \
-            __delay_cycles(100000); \
-        } \
-    }
-```
-</TabItem>
-
-<TabItem label="Performance Optimization">
-**Optimization Techniques:**
-
-1. **Profile Code** - Identify bottlenecks
-2. **Optimize Algorithms** - Use efficient data structures
-3. **Minimize Interrupts** - Reduce ISR overhead
-4. **Power Management** - Use low-power modes
-5. **Memory Usage** - Optimize RAM and Flash usage
-
-```c
-// Performance monitoring
-volatile uint32_t cycle_count = 0;
-
-// Before critical section
-uint32_t start_time = __read_cycle_counter();
-
-// Your code here
-
-// After critical section
-cycle_count = __read_cycle_counter() - start_time;
-```
-</TabItem>
-</Tabs>
-
-## Next Steps
-
-<CardGrid>
-<Card title="Phase 1: Hardware Setup" icon="laptop">
-**Tasks:**
-- Complete hardware connections
-- Verify all components work
-- Test basic GPIO functionality
-- Implement button debouncing
-</Card>
-
-<Card title="Phase 2: Display System" icon="monitor">
-**Tasks:**
-- Initialize LCD display
-- Create display driver functions
-- Implement menu rendering
-- Add graphical elements
-</Card>
-
-<Card title="Phase 3: Stopwatch Logic" icon="clock">
-**Tasks:**
-- Configure timer for accurate timing
-- Implement start/stop functionality
-- Add reset capability
-- Display time formatting
-</Card>
-
-<Card title="Phase 4: Menu System" icon="list">
-**Tasks:**
-- Design menu structure
-- Implement navigation logic
-- Add settings options
-- Integrate with stopwatch
-</Card>
-</CardGrid>
-
-## Resources and Documentation
-
-<LinkCard
-  title="MSP430FR5994 LaunchPad User Guide"
-  description="Complete hardware documentation and examples"
-  href="https://www.ti.com/lit/ug/slau677c/slau677c.pdf"
-/>
-
-<LinkCard
-  title="MSP430FR5xx/6xx Family User Guide"
-  description="Comprehensive peripheral documentation"
-  href="https://www.ti.com/lit/ug/slau367p/slau367p.pdf"
-/>
-
-<LinkCard
-  title="Code Composer Studio User Guide"
-  description="IDE features and debugging tools"
-  href="https://www.ti.com/tool/CCSTUDIO"
-/>
-
-<LinkCard
-  title="MSP430 Driver Library"
-  description="Pre-built functions for common tasks"
-  href="https://www.ti.com/tool/MSPDRIVERLIB"
-/>
 
 ---
 
-<Card title="Ready to Begin?" icon="rocket">
-Your development environment is now configured and ready for Lab 0 implementation. Start with the hardware verification tests, then proceed to implement the stopwatch functionality following the modular structure outlined above.
+### 5. Main Loop Structure
 
-**Good luck with your embedded systems journey!**
-</Card>
+The main loop (`while(true)`) is where all recurring tasks are executed in non-blocking intervals. Each task checks its elapsed time counter and executes only when its timer expires.
+
+This pattern ensures that the program remains responsive without delays.
+
+---
+
+### 6. Display Drawing Functions
+
+It’s recommended to separate the LCD drawing logic into functions for readability and maintainability:
+
+#### Stopwatch Display
+Draws the stopwatch title and current time.
+```cpp
+static void drawStopwatchScreen(tContext &context, uint32_t currentSec, bool running)
+{
+    tRectangle rectFull = {0, 0, 127, 127};
+    GrContextForegroundSet(&context, ClrBlack);
+    GrRectFill(&context, &rectFull);
+
+    GrContextForegroundSet(&context, ClrCyan);
+    GrStringDrawCentered(&context, "STOPWATCH", -1, 64, 15, false);
+
+    char str[10];
+    snprintf(str, sizeof(str), "%02u s", currentSec);
+
+    GrContextForegroundSet(&context, running ? ClrYellow : ClrOlive);
+    GrStringDrawCentered(&context, str, -1, 64, 50, false);
+}
+```
+
+#### Button Drawing
+Handles rendering of buttons with color changes when pressed.
+```cpp
+static void drawButton(tContext &context, const MyButton &btn)
+{
+    uint16_t bgColor = btn.pressed ? ClrBlack : ClrGray;
+    uint16_t textColor = btn.pressed ? ClrWhite : ClrBlack;
+
+    tRectangle rect = {btn.x, btn.y, btn.x + btn.w - 1, btn.y + btn.h - 1};
+    GrContextForegroundSet(&context, bgColor);
+    GrRectFill(&context, &rect);
+
+    GrContextForegroundSet(&context, ClrBlack);
+    GrRectDraw(&context, &rect);
+
+    GrContextForegroundSet(&context, textColor);
+    GrStringDrawCentered(&context, btn.label, -1,
+                         btn.x + btn.w / 2, btn.y + btn.h / 2, false);
+}
+```
+
+> [!TIP]
+> Separate the drawing logic for UI elements (like stopwatch text and buttons) from the logic that updates values and handles input events. This makes your code modular, cleaner, and easier to debug.
+
+## Implementation Tasks
+
+You must extend this implementation to complete the full stopwatch behavior:
+
+1. **Add a second button (S2)**  
+   ‑ Use `Button btnReset(S2);`  
+   ‑ When pressed, set the stopwatch time back to zero.
+
+2. **Expand the time format**  
+   ‑ Display the time as `HH:MM:SS:MS`.  
+   ‑ Convert milliseconds using division and modulo operations.
+
+3. **Display the system state**  
+   ‑ Show a label `Running` or `Stopped` depending on the value of `gRunning`.
+
+4. **Add a second on‑screen button for Reset**  
+   ‑ Create a new `MyButton` struct instance for Reset.  
+   ‑ The button should visually change when S2 is pressed.
+
+5. **Improve display logic**  
+   ‑ Limit updates to roughly 60 Hz (`~16 ms` between redraws).  
+   ‑ Only refresh when time, button state, or mode changes.
+
+6. **Ensure debouncing and callbacks**  
+   ‑ Use `btnPlayPause.setDebounceMs(30)` and similar for the Reset button.  
+   ‑ Implement callback functions `onPlayPauseClick()`, `onResetClick()`, etc.
+
+---
+
+### Expected Behavior
+
+- The stopwatch starts in the **Stopped** state at `00:00:00:000`.  
+- Pressing **S1** toggles between **Running** and **Stopped**.  
+- Pressing **S2** resets the timer to zero.  
+- The text label reflects the current state.
+- The on‑screen buttons change color briefly when their physical counterparts are pressed.
+
+<p align="center">
+  <img src="https://hackmd.io/_uploads/rknEKi4Rlx.png" alt="Stopwatch example screen" width="420" style="border-radius:10px; box-shadow:0 0 10px #00ffff66;"/>
+  <br/>
+  <sub><span style="color:#4ec9b0; font-weight:bold;">Example of the stopwatch interface with on‑screen buttons and state indicator</span></sub>
+</p>
+
+
+## Deliverables
+
+Your final stopwatch application must:
+- Display the time in `HH:MM:SS:MS` format.  
+- Show `Running` or `Stopped` based on the system state.  
+- Respond visually and functionally to both S1 and S2 presses.  
+- Maintain smooth updates and clean modular code.
+
+---
+
+### Submitting Source Code
+
+**Exporting project:**
+
+1. Ensure project named `ece3849_lab0_<username>`.
+2. Right‑click the project → `Export...` → `General` → `Archive File`.
+3. Choose the output path and filename equal to the project name (`ece3849_lab0_<username>.zip`).
+4. Upload `.zip` to Canvas.
+
+---
+
+## Appendix / Useful Links
+
+* TI TivaWare: [https://www.ti.com/tool/SW-TM4C](https://www.ti.com/tool/SW-TM4C)
+* Graphics Library User Guide: [https://www.ti.com/lit/ug/spmu300e/spmu300e.pdf](https://www.ti.com/lit/ug/spmu300e/spmu300e.pdf)
+* TM4C1294 Datasheet: [https://www.ti.com/lit/ds/symlink/tm4c1294ncpdt.pdf](https://www.ti.com/lit/ds/symlink/tm4c1294ncpdt.pdf)
+* EK‑TM4C1294XL: [https://www.ti.com/tool/EK-TM4C1294XL](https://www.ti.com/tool/EK-TM4C1294XL)
+* BoosterPack EDUMKII: [https://www.ti.com/tool/BOOSTXL-EDUMKII](https://www.ti.com/tool/BOOSTXL-EDUMKII)
+
+---
