Add reference documentation for various libraries and features
- Created Button Driver documentation detailing usage, features, and examples.
- Added OPT3001 documentation for the I²C light sensor, including API summary and example usage.
- Introduced TimerLib documentation for timer management on TM4C1294XL.
- Added elapsedTime documentation for measuring time intervals with elapsedMicros, elapsedMillis, and elapsedSeconds classes.
- Created Joystick Driver documentation for handling joystick input on BOOSTXL-EDUMKII.
- Developed multi-screen interface tutorial for managing graphical screens on TM4C1294XL.
- Added PWM Buzzer documentation for generating sound using PWM with button interactions.

--- a/src/content/docs/guides/setupGuide.mdx
+++ b/src/content/docs/guides/setupGuide.mdx
@@ -55,14 +55,14 @@ import {
 ## Setup Steps Overview
 
 <Steps>
-  <ol>
-    <li><LinkButton href="/guides/installccs">Install CCS & TivaWare</LinkButton></li>
-    <li><LinkButton href="/guides/enviromentsetup">Configure CCS Environment</LinkButton></li>
-    <li><LinkButton href="/guides/openworkspace">Workspace Setup</LinkButton></li>
-    <li><LinkButton href="/guides/labkit">Lab Kit Overview</LinkButton></li>
-    <li><LinkButton href="/guides/external_libraries">External Libraries</LinkButton></li>
-    <li><LinkButton href="/guides/programmingstyle">Programming Style</LinkButton></li>
-  </ol>
+    <ol>
+        <li><LinkButton href="/guides/installccs" target="_blank">Install CCS & TivaWare</LinkButton></li>
+        <li><LinkButton href="/guides/enviromentsetup" target="_blank">Configure CCS Environment</LinkButton></li>
+        <li><LinkButton href="/guides/openworkspace" target="_blank">Workspace Setup</LinkButton></li>
+        <li><LinkButton href="/guides/labkit" target="_blank">Lab Kit Overview</LinkButton></li>
+        <li><LinkButton href="/guides/external_libraries" target="_blank">External Libraries</LinkButton></li>
+        <li><LinkButton href="/guides/programmingstyle" target="_blank">Programming Style</LinkButton></li>
+    </ol>
 </Steps>
 
 ---
