--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -24,6 +24,14 @@ import { FileTree } from '@astrojs/starlight/components';
       href="/guides/labtimeline/"
       icon="right-arrow"
    />
+<LinkCard
+  title="Download Lab 0 Template"
+  description="Download the starter code for Lab 0."
+  href="https://drive.google.com/file/d/1FJGgkUAV4Qfg2_SORUwcWuvAiNmf_0bi/view?usp=sharing"
+  icon="right-arrow"
+  target="_blank"
+  rel="noopener noreferrer"
+/>
 </CardGrid>
 
 ## Introduction
@@ -86,7 +94,7 @@ Before starting this lab, make sure you have the following:
 - **TI EK-TM4C1294XL LaunchPad** Development Kit  
 - **BOOSTXL-EDUMKII** BoosterPack  
 - **Micro-USB cable** for programming and power  
-- **Lab 0 Template:** [Download ZIP](https://example.com/lab0-starter.zip)
+- **Lab 0 Template:** <a href="https://drive.google.com/file/d/1FJGgkUAV4Qfg2_SORUwcWuvAiNmf_0bi/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download ZIP</a>
 
 
 ## Stopwatch Implementation
