Multiples mejoras en la documentacion y ejemplos para soportar el lab 1

--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -9,8 +9,8 @@ import { Icon } from '@astrojs/starlight/components';
 import { Card, CardGrid, Badge, LinkCard } from '@astrojs/starlight/components';
 import { FileTree } from '@astrojs/starlight/components';
 
-
 ## Prerequisites
+
 <CardGrid>
    <LinkCard
       title="Complete Setup Guide First"
@@ -27,10 +27,8 @@ import { FileTree } from '@astrojs/starlight/components';
 <LinkCard
   title="Download Lab 0 Template"
   description="Download the starter code for Lab 0."
-  href="https://drive.google.com/file/d/1FJGgkUAV4Qfg2_SORUwcWuvAiNmf_0bi/view?usp=sharing"
+  href="/assets/lab_files/Lab_0.zip"
   icon="right-arrow"
-  target="_blank"
-  rel="noopener noreferrer"
 />
 </CardGrid>
 
