--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -124,7 +124,7 @@ Button library provides double-click detection functionality.
 <LinkCard
   title="Button Driver with Double-Click callbacks"
   description="Learn how to use the Button driver to detect double-click events."
-  href="/reference/libraries/buttonsdriver/#example-callbacks"
+  href="/reference/libraries/buttonsdriver/"
   icon="right-arrow"
   target="_blank"
   rel="noopener noreferrer"
